[package]
name = "rename_me"
version = "0.1.0"
authors = ["zacck <coderv63@gmail.com>"]
edition = "2018"

[profile.release]
opt-level = 'z' # turn on maximum optimizations. We only have 64kB
lto = true      # Link-time-optimizations for further size reduction

[dependencies]
cortex-m = "^0.6.3"      # Access to the generic ARM peripherals
cortex-m-rt = "^0.6.12"  # Startup code for the ARM Core
embedded-hal = "^0.2.4"  # Access to generic embedded functions (`set_high`)
panic-semihosting ="0.5.2"
nb = "0.1.2"
hd44780-driver = "0.4.0" # LCD driver crate
cortex-m-semihosting = "0.3.3"


[dependencies.stm32f1]
version = "0.11.0"
features = ["stm32f103", "rt"]

# Access to the stm32f103 HAL.
[dependencies.stm32f1xx-hal]
# Bluepill contains a 64kB flash variant which is called "medium density"
features = ["stm32f103", "rt", "medium"]
version = "^0.6.1"
